--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "file-saver": "^2.0.5",
     "react-router": "^6.21.3",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
@@ -37,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
